crates/plotnik-tests/tests/03-analyze/alternations/mixed_captured.txt
Q = [
  A: (a)
  (b)
] @choice
------------------ DIAGNOSTICS -------------------
error: an alternation cannot mix labeled and unlabeled alternatives
 --> query.ptk:3:3
  |
2 |   A: (a)
  |   - labeled alternative here
3 |   (b)
  |   ^^^
  |
help: either label every alternative or remove all labels
------------------ DEFINITIONS -------------------
